--- a/Resources/Prototypes/Actions/crit.yml
+++ b/Resources/Prototypes/Actions/crit.yml
@@ -1,8 +1,8 @@
 ﻿# Actions added to mobs in crit.
 - type: entity
   id: ActionCritSuccumb
-  name: Succumb
-  description: Accept your fate.
+  name: Сдаться #imperial translate
+  description: Прими свою судьбу. #imperial translate
   noSpawn: true
   components:
   - type: InstantAction
@@ -15,8 +15,8 @@
 
 - type: entity
   id: ActionCritFakeDeath
-  name: Fake Death
-  description: Pretend to take your final breath while staying alive.
+  name: Фальшивая Смерть #imperial translate
+  description: Притворитесь, что делаете последний вздох, оставаясь в живых. #imperial translate
   noSpawn: true
   components:
   - type: InstantAction
@@ -30,8 +30,8 @@
 
 - type: entity
   id: ActionCritLastWords
-  name: Say Last Words
-  description: Whisper your last words to anyone nearby, and then succumb to your fate. You only have 30 characters to work with.
+  name: Скажи последние слова #imperial translate
+  description: Прошепчите свои последние слова всем, кто рядом, а затем поддайтесь своей судьбе. У вас есть только 30 персонажей для работы. #imperial translate
   noSpawn: true
   components:
   - type: InstantAction
