Фикс укрепленных плиток

--- a/Resources/Prototypes/Entities/Objects/Misc/tiles.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/tiles.yml
@@ -199,6 +199,10 @@
       - FloorReinforced
   - type: Stack
     stackType: FloorTileReinforced
+  #Imperial craft tiles
+  - type: Construction
+    graph: TileReinforced
+    node: reinforcedtile
 
 # TODO add a catwalk tile item once tile smoothing is supported
 
