Исправление локализации в задании вора

--- a/Resources/Prototypes/Objectives/stealTargetGroups.yml
+++ b/Resources/Prototypes/Objectives/stealTargetGroups.yml
@@ -95,7 +95,7 @@
 
 - type: stealTargetGroup
   id: HeadCloak
-  name: головной убор (любой)
+  name: плащ главы (любой)
   sprite:
     sprite: Clothing/Neck/Cloaks/cap.rsi
     state: icon
