--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/detdrobe.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/detdrobe.yml
@@ -5,6 +5,7 @@
     ClothingUniformJumpskirtDetective: 2
     ClothingShoesColorBrown: 2
     ClothingOuterCoatDetective: 2
+    ClothingOuterCoatDetectiveDark: 2 ## Custom Clothes Imperial Space. Изначально взято от Corvax.
     ClothingHeadHatFedoraBrown: 2
     ClothingUniformJumpsuitDetectiveGrey: 2
     ClothingUniformJumpskirtDetectiveGrey: 2
