comment crewskills component

--- a/Resources/Prototypes/Imperial/ArcaneStation/RolePrototypes/RolePrototypes.yml
+++ b/Resources/Prototypes/Imperial/ArcaneStation/RolePrototypes/RolePrototypes.yml
@@ -17,17 +17,17 @@
       prototypes: [ ArcaneTraderGear ]
     - type: RandomHumanoidAppearance
       randomizeName: false
-    - type: CrewSkills
-      skills:
-        - skillBotany
-        - skillBaseMed
-        - skillBaseConstraction
-        - skillCooking
-        - skillBartending
-        - skillMedicalEquipment
-        - skillPiloting
-        - skillShooting
-        - skillMaintenance
+    # - type: CrewSkills
+    #   skills:
+    #     - skillBotany
+    #     - skillBaseMed
+    #     - skillBaseConstraction
+    #     - skillCooking
+    #     - skillBartending
+    #     - skillMedicalEquipment
+    #     - skillPiloting
+    #     - skillShooting
+    #     - skillMaintenance
 
 - type: entity
   noSpawn: false
@@ -51,15 +51,15 @@
       prototypes: [ ArcaneSmugglerGear ]
     - type: RandomHumanoidAppearance
       randomizeName: false
-    - type: CrewSkills
-      skills:
-        - skillBotany
-        - skillBaseMed
-        - skillBaseConstraction
-        - skillHacking
-        - skillPiloting
-        - skillShooting
-        - skillMaintenance
+    # - type: CrewSkills
+    #   skills:
+    #     - skillBotany
+    #     - skillBaseMed
+    #     - skillBaseConstraction
+    #     - skillHacking
+    #     - skillPiloting
+    #     - skillShooting
+    #     - skillMaintenance
 
 - type: entity
   noSpawn: false
@@ -80,19 +80,19 @@
       prototypes: [ ArcaneMercGear ]
     - type: RandomHumanoidAppearance
       randomizeName: false
-    - type: CrewSkills
-      skills:
-        - skillBotany
-        - skillBaseMed
-        - skillBaseConstraction
-        - skillHacking
-        - skillInstrumentation
-        - skillMaintenance
-        - skillMedicalEquipment
-        - skillPharmacology
-        - skillPiloting
-        - skillShooting
-        - skillSurgery
+    # - type: CrewSkills
+    #   skills:
+    #     - skillBotany
+    #     - skillBaseMed
+    #     - skillBaseConstraction
+    #     - skillHacking
+    #     - skillInstrumentation
+    #     - skillMaintenance
+    #     - skillMedicalEquipment
+    #     - skillPharmacology
+    #     - skillPiloting
+    #     - skillShooting
+    #     - skillSurgery
 
 - type: entity
   noSpawn: false
@@ -113,19 +113,19 @@
       prototypes: [ ArcaneHeadMercGear ]
     - type: RandomHumanoidAppearance
       randomizeName: false
-    - type: CrewSkills
-      skills:
-        - skillBotany
-        - skillBaseMed
-        - skillBaseConstraction
-        - skillHacking
-        - skillInstrumentation
-        - skillMaintenance
-        - skillMedicalEquipment
-        - skillPharmacology
-        - skillPiloting
-        - skillShooting
-        - skillSurgery
+    # - type: CrewSkills
+    #   skills:
+    #     - skillBotany
+    #     - skillBaseMed
+    #     - skillBaseConstraction
+    #     - skillHacking
+    #     - skillInstrumentation
+    #     - skillMaintenance
+    #     - skillMedicalEquipment
+    #     - skillPharmacology
+    #     - skillPiloting
+    #     - skillShooting
+    #     - skillSurgery
 
 - type: entity
   noSpawn: false
@@ -146,14 +146,14 @@
       prototypes: [ ArcaneBomjGear ]
     - type: RandomHumanoidAppearance
       randomizeName: false
-    - type: CrewSkills
-      skills:
-        - skillBotany
-        - skillBaseMed
-        - skillBaseConstraction
-        - skillHacking
-        - skillInstrumentation
-        - skillMaintenance
-        - skillPiloting
-        - skillMediumConstruction
-        - skillBasicAtmos
+    # - type: CrewSkills
+    #   skills:
+    #     - skillBotany
+    #     - skillBaseMed
+    #     - skillBaseConstraction
+    #     - skillHacking
+    #     - skillInstrumentation
+    #     - skillMaintenance
+    #     - skillPiloting
+    #     - skillMediumConstruction
+    #     - skillBasicAtmos
