--- a/Resources/Prototypes/Catalog/Fills/Books/bookshelf.yml
+++ b/Resources/Prototypes/Catalog/Fills/Books/bookshelf.yml
@@ -95,3 +95,15 @@
         orGroup: BookPool
       - id: BookChemicalCompendium
         orGroup: BookPool
+      - id: MishkaBook
+        prob: 0.1
+      - id: CvetokBook
+        prob: 0.1
+      - id: LesBook
+        prob: 0.1
+      - id: LisaBook
+        prob: 0.1
+      - id: ZvezdochkaBook
+        prob: 0.1
+      - id: ZaecBook
+        prob: 0.1
