Небольшие изменения Офицера Спецопераций и его снаряжения (#299)
* Update SpecialOfficerClothes.yml

* Update SpecialOfficerSpawner.yml

* Добавление ОСО импланта МЩ и фракции Эскадрона

--- a/Resources/Prototypes/Imperial/Special Officer/SpecialOfficerSpawner.yml
+++ b/Resources/Prototypes/Imperial/Special Officer/SpecialOfficerSpawner.yml
@@ -27,6 +27,10 @@
       prototypes: [ SpecialOfficerGear ]
     - type: RandomHumanoidAppearance
       randomizeName: false
+    - type: MindShield
+    - type: NpcFactionMember
+      factions:
+      - DeathSquad # Кастомная фракция Imperial Space
 
 - type: dataset ## Датасет, чтобы ОСО начинался с офицер
   id: SpecialOfficerName
