--- a/Resources/Prototypes/Entities/Objects/Materials/Sheets/metal.yml
+++ b/Resources/Prototypes/Entities/Objects/Materials/Sheets/metal.yml
@@ -66,10 +66,14 @@
     solutions:
       steel:
         reagents:
+        # Imperial Space lico-bugfix Start
         - ReagentId: Iron
-          Quantity: 9
+          Quantity: 19
         - ReagentId: Carbon
-          Quantity: 1
+          Quantity: 2
+        - ReagentId: Lead
+          Quantity: 0.5
+        # Imperial Space lico-bugfix End
 
 - type: entity
   parent: SheetSteel
