move update arbalet

--- a/Resources/Prototypes/Imperial/MiniCrossbow/projectiles.yml
+++ b/Resources/Prototypes/Imperial/MiniCrossbow/projectiles.yml
@@ -14,7 +14,7 @@
     sprite: Imperial/MiniCrossbow.rsi
     color: "#228B22"
     layers:
-    - state: crossbow-bolt
+    - state: cbbolt
       shader: unshaded
   - type: Physics
   - type: Fixtures
