--- a/Resources/Prototypes/Imperial/MiniCrossbow/battery_guns.yml
+++ b/Resources/Prototypes/Imperial/MiniCrossbow/battery_guns.yml
@@ -11,10 +11,14 @@
     - Sidearm
   - type: Sprite
     sprite: Imperial/MiniCrossbow.rsi
-    state: foamcrossbow
+    layers:
+    - state: base
+      map: ["enum.GunVisualLayers.Base"]
+    - state: mag-unshaded-0
+      map: ["enum.GunVisualLayers.MagUnshaded"]
+      shader: shaded
   - type: Item
     sprite: Imperial/MiniCrossbow.rsi
-    heldPrefix: foamcrossbow
   - type: Clothing
     quickEquip: false
     slots:
@@ -31,4 +35,8 @@
     proto: BulletCrossbow
     capacity: 1
     count: 1
+  - type: MagazineVisuals
+    magState: mag
+    steps: 2
+    zeroVisible: true
   - type: Appearance
