--- a/Resources/Prototypes/Entities/Objects/Devices/flatpack.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/flatpack.yml
@@ -3,8 +3,8 @@
   id: BaseFlatpack
   name: base flatpack
   description: A flatpack used for constructing something.
-  categories:
-  - hideSpawnMenu
+  # categories: # Imperial fix
+  # - hideSpawnMenu # Imperial fix
   components:
   - type: Item
     size: Large
