--- a/Resources/Prototypes/Imperial/Sona/Armor/Armor.yml
+++ b/Resources/Prototypes/Imperial/Sona/Armor/Armor.yml
@@ -2,7 +2,7 @@
   parent: ClothingOuterStorageBase
   id: ClothingOuterSonaArmor
   name: Body armor S-o.N.A
-  suffix: S-o.N.A
+  suffix: Vl, S-o.N.A
   description: The bulletproof vest of S-o.N.A. AI Dynamics corporation, designed to bring maximum convenience to the wearer, also giving decent protection.
   components:
   - type: Item
