--- a/Resources/Prototypes/Imperial/Sona/Backpack/Backpack.yml
+++ b/Resources/Prototypes/Imperial/Sona/Backpack/Backpack.yml
@@ -2,7 +2,7 @@
   parent: ClothingBackpack
   id: ClothingBackpackSona
   name: Backpack S-o.N.A
-  suffix: S-o.N.A
+  suffix: Vl, S-o.N.A
   description: Backpack with additional storage of S-o.N.A. AI Dynamics Corporation.
   components:
   - type: Item
