--- a/Resources/Prototypes/Imperial/Sona/Banner/banners.yml
+++ b/Resources/Prototypes/Imperial/Sona/Banner/banners.yml
@@ -2,7 +2,7 @@
   id: BannerSona
   parent: BannerBase
   name: Banner S-o.N.A
-  suffix: S-o.N.A
+  suffix: Vl, S-o.N.A
   description: Banner S-o.N.A. AI Dynamics.
   components:
   - type: Sprite
