--- a/Resources/Prototypes/Imperial/Sona/Glasses/Glasses.yml
+++ b/Resources/Prototypes/Imperial/Sona/Glasses/Glasses.yml
@@ -2,7 +2,7 @@
   parent: ClothingEyesBase
   id: ClothingEyesGlassesSona
   name: Safety glasses S-o.N.A
-  suffix: S-o.N.A
+  suffix: Vl, S-o.N.A
   description: Stylish glasses of S-o.N.A. AI Dynamics corporation, which protect against flashes and have a built-in visor.
   components:
   - type: Item
