--- a/Resources/Prototypes/Imperial/Sona/Linses/Linses.yml
+++ b/Resources/Prototypes/Imperial/Sona/Linses/Linses.yml
@@ -2,7 +2,7 @@
   parent: ClothingEyesBase
   id: ClothingEyesLinsesSona
   name: Lenses S-o.N.A
-  suffix: S-o.N.A
+  suffix: Vl, S-o.N.A
   description: Technological lenses of S-o.N.A. AI Dynamics Corporation.
   components:
   - type: Item
