--- a/Resources/Prototypes/Imperial/Sona/Plant/Plant.yml
+++ b/Resources/Prototypes/Imperial/Sona/Plant/Plant.yml
@@ -2,7 +2,7 @@
   id: BlueSakyraSona
   parent: PottedPlantBase
   name: Blue Sakura
-  suffix: S-o.N.A
+  suffix: Vl, S-o.N.A
   description: A cute little sakura in blue.
   components:
   - type: Sprite
