--- a/Resources/Prototypes/Imperial/Sona/Satchel/Satchel.yml
+++ b/Resources/Prototypes/Imperial/Sona/Satchel/Satchel.yml
@@ -2,7 +2,7 @@
   parent: ClothingBackpack
   id: ClothingSatchelSona
   name: Satchel S-o.N.A
-  suffix: S-o.N.A
+  suffix: Vl, S-o.N.A
   description: The standard bag of S-o.N.A. AI Dynamics employees.
   components:
   - type: Item
