--- a/Resources/Prototypes/Imperial/Sona/Skirt/Skirt.yml
+++ b/Resources/Prototypes/Imperial/Sona/Skirt/Skirt.yml
@@ -2,7 +2,7 @@
   parent: ClothingUniformSkirtBase
   id: ClothingUniformJumpskirtSona
   name: Bright blue S-o.N.A skirt
-  suffix: S-o.N.A
+  suffix: Vl, S-o.N.A
   description: A bright blue skirt used by employees of S-o.N.A. AI Dynamics corporation.
   components:
   - type: Item
