--- a/Resources/Prototypes/Imperial/Sona/SonaPAI/SonaPAI.yml
+++ b/Resources/Prototypes/Imperial/Sona/SonaPAI/SonaPAI.yml
@@ -2,7 +2,7 @@
   parent: BaseItem
   id: PersonalSona
   name: personal S-o.N.A
-  suffix: S-o.N.A
+  suffix: Vl, S-o.N.A
   description: Your best synthetic girlfriend! ATTENTION, S-o.N.A. AI Dynamics CORPORATION IS NOT RESPONSIBLE FOR THE QUALITY OF THE SOFTWARE!
   components:
   - type: Instrument
