--- a/Resources/Prototypes/Imperial/Sona/SonaWebbing/SonaWebbing.yml
+++ b/Resources/Prototypes/Imperial/Sona/SonaWebbing/SonaWebbing.yml
@@ -2,7 +2,7 @@
   parent: ClothingBeltStorageBase
   id: SonaWebbing
   name: Webbing S-o.N.A
-  suffix: S-o.N.A
+  suffix: Vl, S-o.N.A
   description: Tactical Webbing of the fighters of the S-o.N.A. AI Dynamics corporation.
   components:
   - type: Sprite
