--- a/Resources/Prototypes/Imperial/Horror/Gyls/Gyls.yml
+++ b/Resources/Prototypes/Imperial/Horror/Gyls/Gyls.yml
@@ -53,6 +53,7 @@
     - type: SlowOnDamage
       speedModifierThresholds:
         100: 1.2
+    - type: Muted
 
 - type: entity
   name: Ghoul
@@ -109,6 +110,7 @@
     - type: SlowOnDamage
       speedModifierThresholds:
         100: 1.2
+    - type: Muted
 
 - type: entity
   name: Ghoul
@@ -165,6 +167,7 @@
     - type: SlowOnDamage
       speedModifierThresholds:
         100: 1.2
+    - type: Muted
 
 - type: entity
   id: HorrorMobBrain
