--- a/Resources/Prototypes/Imperial/Sona/Cap/Cap.yml
+++ b/Resources/Prototypes/Imperial/Sona/Cap/Cap.yml
@@ -2,7 +2,7 @@
   parent: ClothingHeadBase
   id: ClothingHeadHatCapSona
   name: Cap S-o.N.A
-  suffix: S-o.N.A
+  suffix: Vl, S-o.N.A
   description: The standard cap of employees of S-o.N.A. AI Dynamics Corporation.
   components:
   - type: Item
