--- a/Resources/Prototypes/Imperial/Sona/Duffel/Duffel.yml
+++ b/Resources/Prototypes/Imperial/Sona/Duffel/Duffel.yml
@@ -2,7 +2,7 @@
   parent: ClothingBackpackDuffel
   id: ClothingBackpackDuffelSona
   name: Duffel S-o.N.A
-  suffix: S-o.N.A
+  suffix: Vl, S-o.N.A
   description: A duffel bag of S-o.N.A. AI Dynamics corporation, with additional BlueSpace storage, which was leased from NanoTrasen.
   components:
   - type: Item
