--- a/Resources/Prototypes/Imperial/Sona/EliteNeck/EliteNeck.yml
+++ b/Resources/Prototypes/Imperial/Sona/EliteNeck/EliteNeck.yml
@@ -2,7 +2,7 @@
   parent: ClothingNeckBase
   id: ClothingEliteNeckCloakSona
   name: Elite cloak S-o.N.A
-  suffix: S-o.N.A
+  suffix: Vl, S-o.N.A
   description: A beautiful elite cloak that is used by high-ranking people in the S-o.N.A. AI Dynamics corporation.
   components:
   - type: Item
