--- a/Resources/Prototypes/Imperial/Sona/Jumsuit/Sec/SecSona.yml
+++ b/Resources/Prototypes/Imperial/Sona/Jumsuit/Sec/SecSona.yml
@@ -2,7 +2,7 @@
   parent: ClothingUniformBase
   id: ClothingUniformJumpsuitSonaSec
   name: Jumpsuit S-o.N.A
-  suffix: S-o.N.A
+  suffix: Vl, S-o.N.A
   description: A practical and comfortable suit made of pure synthetics.
   components:
     - type: Item
