--- a/Resources/Prototypes/Imperial/Sona/Mantle/Mantle.yml
+++ b/Resources/Prototypes/Imperial/Sona/Mantle/Mantle.yml
@@ -2,7 +2,7 @@
   parent: ClothingNeckBase
   id: ClothingNeckMantleSonaShoulder
   name: Mantle S-o.N.A
-  suffix: S-o.N.A
+  suffix: Vl, S-o.N.A
   description: The mantle of S-o.N.A. AI Dynamics corporation, covered with a special fiber, which partially protects against laser guns.
   components:
   - type: Item
