--- a/Resources/Prototypes/Imperial/Sona/Neck/Neck.yml
+++ b/Resources/Prototypes/Imperial/Sona/Neck/Neck.yml
@@ -2,7 +2,7 @@
   parent: ClothingNeckBase
   id: ClothingNeckCloakSona
   name: Cloak S-o.N.A
-  suffix: S-o.N.A
+  suffix: Vl, S-o.N.A
   description: A beautiful cloak that is used by high-ranking people in the S-o.N.A. AI Dynamics corporation.
   components:
   - type: Item
