remove sleep spell from gnomes

--- a/Resources/Prototypes/Imperial/DRGbeer/gnomage/dagnome.yml
+++ b/Resources/Prototypes/Imperial/DRGbeer/gnomage/dagnome.yml
@@ -26,7 +26,7 @@
     rules: ghost-role-information-gnome-rules
   - type: AutoImplant
     implants:
-    - BeerImplantGnome
+    # - BeerImplantGnome
     - BeerImplantClowned
     - BeerImplantGnomes
     - BeerImplantSmoke
