--- a/Resources/Prototypes/Imperial/DRGbeer/gnome.yml
+++ b/Resources/Prototypes/Imperial/DRGbeer/gnome.yml
@@ -45,9 +45,9 @@
     rules: ghost-role-information-gnome-rules
   - type: GhostTakeoverAvailable
   - type: Flashable
-  - type: AutoImplant
-    implants:
-    - BeerImplantGnome
+  # - type: AutoImplant
+  #   implants:
+  #   - BeerImplantGnome
   - type: Tag
     tags:
     - CannotSuicide
