Фикс аммуниционного техфаба

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -782,6 +782,7 @@
       whitelist:
         tags:
           - Sheet
+          - Ingot # Fix Imperial Space. Сделано, чтобы можно было печатать транквилизаторные патроны
 
 - type: entity
   id: MedicalTechFab
